Added 8 string and bass high-c tunings.
Signed-off-by: Rohan Khayech <rohankhayech@gmail.com>